# steamworks

./: .clang_complete  .gitignore  .vault_pw  CHANGELOG.md  CMakeLists.txt  Main.cpp  Makefile  NVIDIAUtils.cpp  NetworkPorts.cpp  README.md  UDPHandler.cpp  Vagrantfile  WORKSPACE  opencv_jetson_cross.BUILD
bdc/src/: CMakeLists.txt  Main.cpp
deadeye/src/: CMakeLists.txt  deadeye.h  fps.h  link.cc  link.h  main.cc
deadeye/src/boiler/: CMakeLists.txt  boiler_camera.cc  boiler_frame.h
deadeye/src/gear/: CMakeLists.txt  gear_camera.h  gear_frame.cc  gear_frame.h
deadeye/test/: CMakeLists.txt  deadeye_test.cc  test-runner.cc
deadeye/test/data/: README.md
examples/drivetest/: CMakeLists.txt  oi.cc  oi.h  robot.cc  robot.h  robot_config.h.in  robot_map.cc  robot_map.h
examples/drivetest/commands/: CMakeLists.txt  tele_drive.cc  tele_drive.h  zero_drive_wheels.cc  zero_drive_wheels.h
examples/drivetest/subsystems/: CMakeLists.txt  drive.cc  drive.h
lib/: BUILD  CMakeLists.txt  HostToObject.h  JerrysGrapher.cpp  ObjectToGrapher.h  RIOUtils.h  SocketHandler.cpp  config.cc  deadeye.cc  frame_processor.cc  robot.cc  target.cc
src/: BUILD  CMakeLists.txt  Main.REMOVED.git-id  Main.cpp  OneLiners.cpp  boiler_camera.cc  boiler_camera.h  boiler_frame.cc  boiler_frame.h  boiler_target_data.h  camera.cc  camera.cpp  camera.h  config.cpp  deadeye.cc  deadeye.h  deadeye_config.h.in  deadeyed.cc  fps.cc  frame.cc  frame.h  frame_processor.cpp  gear_camera.cc  gear_camera.h  gear_frame.cc  gear_frame.h  link.cc  link.h  log.cc  log.h  main.cc  main.cpp  message.cpp  nvidia_utils.cpp  oi.cc  oi.h  pipeline.cc  robot.cc  robot.cpp  robot.h  (+8 more)
src/boiler/: boiler_camera.cc  boiler_camera.h  boiler_frame.cc  boiler_frame.h
src/commands/: CMakeLists.txt  azimuth.cc  azimuth.h  climber.cc  climber.h  commands.h  drive.cc  drive.h  hopper.cc  hopper.h  intake.cc  intake.h  log.cc  log.h  position_turret.cc  reset_cannon.cc  reset_cannon.h  tele_drive.cc  tele_drive.h  zero_drive_wheels.cc
src/commands/auton/: CMakeLists.txt  README.md  auton.h  sequence_01.cc  sequence_01.h  sequence_02.cc  sequence_03.cc  sequence_04.cc  sequence_04.h  sequence_05.cc  sequence_06.cc  sequence_07.cc  sequence_07.h  sequence_08.cc  sequence_09.cc  sequence_0A.cc  sequence_0C.cc  test.cc  test.h
src/commands/climber/: finish_climb.cc  finish_climb.h  override.cc
src/commands/deadeye/: CMakeLists.txt  gear_led.cc  mode.cc  shooter_led.cc  shooter_led.h
src/commands/drive/: CMakeLists.txt  auton.cc  auton.h  azimuth.cc  azimuth.h  brake.cc  brake.h  drive_zero.cc  drive_zero.h  health_check.cc  health_check.h  set_zero.h  tele_op.cc  tele_op.h  zero.cc  zero.h
src/commands/drive/auton/: CMakeLists.txt  azimuth.cc  azimuth.h  deadeye_azimuth.cc  deadeye_azimuth.h  drive.cc  drive.h  gyro_azimuth.cc  position_azimuth.cc  position_azimuth.h  timed_drive.h  (+7 more)
src/commands/gear/: CMakeLists.txt  clamp.cc  clamp.h  clear.cc  deploy.cc  deploy.h  load.cc  load.h  pivot.cc  pivot.h  release.cc  release.h  sequence.cc  sequence.h  zero.cc  zero.h
src/commands/shooter/: CMakeLists.txt  elevation.cc  elevation.h  get_angle.cc  get_angle.h  sequence.cc  sequence.h  set_elevation.cc  set_elevation.h  set_range.cc  set_range.h  set_shooter.cc  set_shooter.h  set_wheel.cc  set_wheel.h  startup.cc  startup.h  wheel.cc  wheel.h  zero.cc  zero.h
src/gear/: gear_camera.cc  gear_frame.cc
src/grapher/: CMakeLists.txt  CodeUtils.cpp  CodeUtils.h  NetworkPorts.h  SocketHandler.cpp  TerminalEscapes.cpp  TerminalEscapes.h
src/link/: CMakeLists.txt  boiler.cc  gear.cc  mode.h  no_target.cc  parser.cc  parser.h  sentence.cc  sentence.h
src/oi/: CMakeLists.txt  sma.cc
src/sidewinder/: CMakeLists.txt  oi.cc  oi.h  swerve_drive.cc  swerve_drive.h  swerve_math.cc  swerve_math.h  talon_map.h  tele_drive.cc  tele_drive.h
src/subsystems/: CMakeLists.txt  camera.cc  camera.h  cannon.cc  cannon.h  climber.cc  climber.h  deadeye.cc  deadeye.h  drive.cc  drive.h  gear.cc  gear.h  gear_intake.cc  hopper.cc  hopper.h  intake.cc  intake.h  motion.cc  motion.h  shooter.cc  shooter.h  shooter_elevation.cc  shooter_elevation.h  shooter_wheel.cc  shooter_wheel.h  subsystems.h  turret.cc  turret.h
src/swerve/: CMakeLists.txt  calc_rotation_vectors.cc  calc_rotation_vectors.h  gyro_swerve_drive.cc  gyro_swerve_drive.h  oi.cc  swerve_drive.cc  swerve_drive.h  swerve_math.cc  swerve_math.h  talon_map.h  tele_drive.h
src/talon/: CMakeLists.txt  motion_magic_settings.cc  pid_settings.cc  pid_settings.h  pid_talon.cc  pid_talon.h  position_settings.cc  position_settings.h  position_talon.cc  position_talon.h  settings.cc  settings.h  talon.cc  talon.h  velocity_settings.cc  velocity_settings.h  voltage_settings.cc  voltage_settings.h  voltage_talon.cc  voltage_talon.h
src/triggers/: CMakeLists.txt  gear.cc  gear.h  gear_intake.cc  gear_trigger.cc  gear_trigger.h  triggers.h  trim.cc  trim.h
steamworks/: CMakeLists.txt  Vagrantfile
steamworks/conf/: comp.toml  default_config.toml  enums.toml  shooter_data.xlsx  velocity_drive.toml
steamworks/src/: CMakeLists.txt  log.cc  log.h  oi.cc  oi.h  robot.cc  robot.h  robot_map.cc  robot_map.h
steamworks/src/commands/: dashboard.cc  dashboard.h  hopper.cc  intake.h  log.cc  log.h
steamworks/src/subsystems/: climber.cc  climber.h  deadeye.cc  deadeye.h  drive.cc  gear.h  hopper.cc  hopper.h  shooter_wheel.cc  shooter_wheel.h
steamworks/src/triggers/: gear_intake.h  trim.h
test/: CMakeLists.txt  boiler_test.cc  checksum_test.cc  config-test.cc  deadeye_test.cc  display.cc  frame_test.cc  frame_test_data.h  parser_test.cc  sentence_test.cc  swerve.cc  swerve_test_data.h
test/data/: boiler_000.png.REMOVED.git-id  boiler_20170119181548.png.REMOVED.git-id  boiler_20170119181635.png.REMOVED.git-id  boiler_20170119181752.png.REMOVED.git-id  boiler_20170119182140.png.REMOVED.git-id  boiler_20170119182623.png.REMOVED.git-id  boiler_20170119182703.png.REMOVED.git-id  boiler_20170119182847.png.REMOVED.git-id  boiler_20170119183036.png.REMOVED.git-id
test/testdata/: test.toml  testdata.h.in
(+215 files in other folders)
